tests/fixtures/positive/naming/VariableMinLength.kt
package naming

fun example() {
    val x = 1
}
