tests/fixtures/negative/style/UnnecessaryBackticks.kt
package style

fun example() {
    val `class` = 1
}
